welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: not found: value Carr
override def run() { Carr-four-color();
                     ^